--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.7'
 } 
 
-//mainClassName = 'app.Main'
+mainClassName = 'app.Main'
 
 dependencies {
     compile project(':base')
