--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
-   // id 'war'
+    id 'java-library' 
 }
 
 allprojects {
