--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
-    id 'java-library' 
+   // id 'application' 
 }
 
 //mainClassName = 'app.Main'
 
+/*
 jar {
     manifest {
         attributes(
@@ -12,14 +13,23 @@ jar {
         )
     }
 }
+*/
 
 allprojects {
     version = '1.0'
+   // println project.name
 }
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'com.github.sherter.google-java-format'
+	
+	if (project.name == "app") {
+        //println project.name
+		tasks.withType(Jar) {
+			destinationDir = file("$rootDir/build/libs")
+   		}
+    }
 
     dependencies {
         // for type inference
