--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:example_db
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 server.port=8080
